--- a/data/htaccess.yml
+++ b/data/htaccess.yml
@@ -1,4 +1,4 @@
 errors:
-    401: /errors/401.html
-    403: /errors/403.html
-    404: /errors/404.html
+    '401': /errors/401.html
+    '403': /errors/403.html
+    '404': /errors/404.html
